--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.25",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.54.2",
     "swiper": "^11.2.6",
     "yup": "^1.6.1"
